data/derived/sp14/progs/unify/prog2163.ml.out
Characters 64-77:
  | hd::l' -> 1 + listReverse l;;
                  ^^^^^^^^^^^^^
Error: This expression has type 'a list
       but an expression was expected of type int
